--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
 version: "2.3"
 services:
    sftp:
-     build: /home/pasha/FPN/hw12
+     build: /UFPN/ftp
      container_name: sftp
-     command: bash "sftp.sh"
+#     command: bash "sftp.sh"
      ports:
          - "223:22"
      volumes: 
-       - /home/pasha/FPN/hw2:/opt/data
-       - /home/pasha/FPN/hw2:/opt/app
+       - /UFPN/ftp:/opt/data
+       - /UFPN/ftp:/opt/app
      networks:
        - devops_network     
 
    python:
-     build: /home/pasha/FPN/lesson9 
+     build: /UFPN/python 
      container_name: python
      command: python "sql_orm.py logfile.log"
      volumes: 
-       - /home/pasha/FPN/ls11:/data
-       - /home/pasha/FPN/ls11:/app
+       - /UFPN/ftp:/opt/data
+       - /UFPN/ftp:/opt/app
      healthcheck:
-       test: ["CMD", "python", "sql_orm.py"]
+       test: ["CMD", "python", "--version"]
        interval: 3s
        timeout: 5s
        retries: 5
        start_period: 1s
 
    nginx:
-     build: /home/pasha/FPN/ls11
+     build: /UFPN/nginx
      ports:
        - "80:883"
      volumes:
-       - /home/pasha/FPN/ls11:/data
+       - /UFPN/ftp:/opt/data
      depends_on:
        redis:
          condition: service_healthy
@@ -40,7 +40,7 @@ services:
    redis:
      image: redis
      volumes:
-       - /home/pasha/FPN//ls10:/opt/data
+       - /UFPN/ftp:/opt/data
      healthcheck:
        test: ["CMD", "redis-cli", "-v"]
        interval: 3s
